fixed menus are not showing issue

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -3,6 +3,7 @@ header {
   top: 0;
   width: 100%;
   z-index: 1;
+  background-color: aliceblue;
   nav {
     color: black;
     top: 0;
